--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="238.09525"
+    android:viewportHeight="238.09525">
+    <group android:translateX="44.04762"
+        android:translateY="44.04762">
+        <path
+            android:pathData="m43.22,134.809c-3.239,-0.363 -7.531,-1.623 -10.383,-3.05 -9.905,-4.954 -16.469,-14.363 -17.648,-25.297 -0.386,-3.581 -0.19,-6.595 0.677,-10.397 1.063,-4.66 2.742,-8.23 5.735,-12.192 1.8,-2.382 26.615,-27.167 28.801,-28.766 11.435,-8.364 26.648,-8.338 38.002,0.063 2.452,1.814 5.187,4.665 6.823,7.111 0.78,1.166 1.418,2.189 1.418,2.274 0,0.084 -2.457,2.586 -5.461,5.559 -4.825,4.776 -6.384,6.162 -6.605,5.872 -0.034,-0.045 -0.353,-0.788 -0.709,-1.65 -1.821,-4.417 -5.736,-7.828 -10.446,-9.101 -1.785,-0.483 -6.283,-0.483 -8.068,0 -1.744,0.472 -4.184,1.67 -5.608,2.755 -0.649,0.495 -6.718,6.462 -13.485,13.262 -13.367,13.43 -13.248,13.292 -14.444,16.714 -2.845,8.144 1.419,17.142 9.531,20.112 4.614,1.689 9.154,1.288 13.574,-1.199 1.21,-0.681 2.361,-1.702 6.331,-5.62l4.852,-4.788 2.134,0.686c2.31,0.743 5.291,1.382 7.934,1.702 2.035,0.246 6.692,0.253 8.562,0.012 0.756,-0.097 1.395,-0.156 1.421,-0.131 0.025,0.026 -4.135,4.222 -9.245,9.324 -10.531,10.516 -12.125,11.858 -16.474,13.878 -5.4,2.508 -11.436,3.513 -17.218,2.865zM76.16,100.891c-3.629,-0.489 -8.299,-2.109 -11.547,-4.006 -3.801,-2.22 -7.537,-5.687 -9.84,-9.131 -0.78,-1.166 -1.418,-2.189 -1.418,-2.274 0,-0.084 2.457,-2.586 5.461,-5.559 4.808,-4.759 6.393,-6.17 6.599,-5.872 0.031,0.045 0.357,0.791 0.724,1.657 1.529,3.605 4.124,6.341 7.582,7.995 2.474,1.183 3.72,1.445 6.887,1.445 2.012,0 3.1,-0.093 4.034,-0.346 1.744,-0.472 4.184,-1.67 5.608,-2.755 0.649,-0.495 6.718,-6.462 13.485,-13.262 13.367,-13.43 13.248,-13.292 14.444,-16.714 2.387,-6.831 -0.201,-14.466 -6.252,-18.447 -5.171,-3.402 -11.331,-3.572 -16.852,-0.466 -1.21,0.681 -2.361,1.702 -6.331,5.62l-4.852,4.788 -2.167,-0.7c-3.531,-1.142 -7.051,-1.719 -11.153,-1.83 -1.948,-0.053 -4.249,-0.005 -5.113,0.106 -0.864,0.111 -1.592,0.181 -1.618,0.155 -0.026,-0.026 4.135,-4.222 9.245,-9.324 9.05,-9.036 10.931,-10.734 13.818,-12.474 4.519,-2.724 10.895,-4.494 16.193,-4.496 4.541,-0.002 10.098,1.293 14.065,3.277 9.905,4.954 16.469,14.363 17.648,25.297 0.388,3.599 0.19,6.595 -0.691,10.454 -1.063,4.654 -2.71,8.147 -5.722,12.134 -1.782,2.358 -26.602,27.155 -28.801,28.773 -3.962,2.916 -8.58,4.913 -13.378,5.786 -2.363,0.43 -7.484,0.516 -10.059,0.169z"
+            android:strokeWidth="0.1967791"
+            android:fillColor="#ffb300"
+            android:fillAlpha="1"/>
+    </group>
 </vector>
