--- a/app/src/main/res/layout/dialog_edit_item.xml
+++ b/app/src/main/res/layout/dialog_edit_item.xml
@@ -18,7 +18,9 @@
             android:minHeight="55dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="0dp">
 
         </androidx.recyclerview.widget.RecyclerView>
 
@@ -26,7 +28,7 @@
             android:id="@+id/dialogAddPassenger_nothingSelected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kein neuer nutzer ausgewählt"
+            android:text="Nichts Ausgewählt"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
