--- a/app/src/main/res/layout/list_item_bubble.xml
+++ b/app/src/main/res/layout/list_item_bubble.xml
@@ -14,7 +14,7 @@
     android:paddingVertical="10dp">
 
     <TextView
-        android:id="@+id/actorList_bubble_name"
+        android:id="@+id/list_bubble_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Finn Flaschka" />
