--- a/app/src/main/res/menu/task_bar.xml
+++ b/app/src/main/res/menu/task_bar.xml
@@ -13,6 +13,29 @@
         android:title="Zufall"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/taskBar_sort"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:title="Sortieren"
+        app:showAsAction="ifRoom">
+        <menu>
+
+            <item
+                android:id="@+id/taskBar_sortByName"
+                android:checkable="true"
+                android:checked="true"
+                android:title="Nach Name" />
+            <item
+                android:id="@+id/taskBar_sortByViews"
+                android:checkable="true"
+                android:title="Nach Ansichten" />
+        </menu>
+    </item>
+    <item
+        android:id="@+id/taskBar_scroll"
+        android:checkable="true"
+        android:checked="true"
+        android:title="Scrollen" />
+    <item
         android:id="@+id/taskBar_delete"
         android:icon="@drawable/ic_delete"
         android:title="Löschen"
