--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="3dp"
-    android:layout_marginHorizontal="15dp"
+    android:layout_margin="3dp"
     android:orientation="horizontal">
 
     <CheckBox
@@ -13,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="14dp"
+        android:layout_marginRight="5dp"
         android:clickable="false"
         android:visibility="gone"
         tools:visibility="visible" />
@@ -56,11 +55,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:maxLines="2"
                         android:text="Name1" />
                 </LinearLayout>
 
                 <View
-                    android:id="@+id/divider"
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:layout_marginHorizontal="8dp"
@@ -100,6 +99,35 @@
                     android:scrollHorizontally="true"
                     android:singleLine="true"
                     android:text="Darsteller1, Darsteller 2, Darsteller 3, Darsteller 4" />
+
+                <LinearLayout
+                    android:id="@+id/listItem_video_rating_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <View
+                        android:id="@+id/view"
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="8dp"
+                        android:layout_marginVertical="3dp"
+                        android:background="?android:attr/listDivider" />
+
+                    <TextView
+                        android:id="@+id/listItem_video_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="2.5" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="☆" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
