--- a/app/src/main/res/layout/dialog_edit_or_add_video.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_video.xml
@@ -152,7 +152,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -173,6 +173,14 @@
                 android:stepSize="0.5" />
 
         </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/dialog_editOrAddVideo_watchLater"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Zu 'Später-Ansehen' hinzufügen?"
+            android:visibility="gone"
+            tools:visibility="visible" />
     </LinearLayout>
 
 </LinearLayout>
