--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/tile_background"
                 android:clickable="true"
+                android:elevation="3dp"
                 android:foreground="@drawable/ripple"
                 android:gravity="center"
                 android:onClick="openVideoActivity"
@@ -38,7 +39,7 @@
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:alpha="0.3"
+                        android:alpha="0.075"
                         android:src="@drawable/ic_videos"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -84,6 +85,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/tile_background"
                 android:clickable="true"
+                android:elevation="3dp"
                 android:foreground="@drawable/ripple"
                 android:gravity="center"
                 android:onClick="openActorActivity"
@@ -96,7 +98,7 @@
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:alpha="0.3"
+                        android:alpha="0.075"
                         android:src="@drawable/ic_person"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -150,6 +152,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/tile_background"
                 android:clickable="true"
+                android:elevation="3dp"
                 android:foreground="@drawable/ripple"
                 android:gravity="center"
                 android:onClick="openStudioActivity"
@@ -162,7 +165,7 @@
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:alpha="0.3"
+                        android:alpha="0.075"
                         android:src="@drawable/ic_studio"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -208,6 +211,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/tile_background"
                 android:clickable="true"
+                android:elevation="3dp"
                 android:foreground="@drawable/ripple"
                 android:gravity="center"
                 android:onClick="openGenreActivity"
@@ -220,7 +224,7 @@
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:alpha="0.3"
+                        android:alpha="0.075"
                         android:src="@drawable/ic_genre"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -272,6 +276,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/tile_background"
                 android:clickable="true"
+                android:elevation="3dp"
                 android:foreground="@drawable/ripple"
                 android:gravity="center"
                 android:onClick="showCalenderDialog"
@@ -284,7 +289,7 @@
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:alpha="0.3"
+                        android:alpha="0.075"
                         android:src="@drawable/ic_kallendar"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -330,6 +335,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/tile_background"
                 android:clickable="true"
+                android:elevation="3dp"
                 android:foreground="@drawable/ripple"
                 android:gravity="center"
                 android:onClick="showWatchLater"
@@ -342,7 +348,7 @@
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:alpha="0.3"
+                        android:alpha="0.075"
                         android:src="@drawable/ic_time"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
