--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorPrimaryDark">#FB8C00</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorDdivider">#D7D8DD</color>
+
+    <color name="colorTileBackground">@android:color/background_light</color>
+    <color name="colorDrawable">#757575</color>
+    <color name="colorBackground">#fafafa</color>
+    <color name="colorBackgroundLight">#ffffff</color>
 </resources>
