--- a/app/src/main/res/drawable/ic_round_background.xml
+++ b/app/src/main/res/drawable/ic_round_background.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#00ffffff" />
-    <padding android:left="6dp"
-        android:top="6dp"
-        android:right="6dp"
-        android:bottom="6dp" />
-    <corners android:radius="20dp" />
-    <stroke android:width="6dp" android:color="#ffffffff" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <item>
+        <shape>
+            <solid android:color="#00ffffff" />
+            <stroke
+                android:width="6dp"
+                android:color="@color/colorBackground" />
+            <corners android:radius="6dp" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <solid android:color="#00ffffff" />
+            <padding
+                android:bottom="6dp"
+                android:left="6dp"
+                android:right="6dp"
+                android:top="6dp" />
+            <corners android:radius="20dp" />
+            <stroke
+                android:width="6dp"
+                android:color="@color/colorBackground" />
+        </shape>
+    </item>
+</layer-list>
