--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -25,7 +25,7 @@
             android:layout_weight="1"
             android:text="Juli 2019"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="@color/colorDrawable"
             android:textSize="18sp" />
 
         <ImageView
@@ -45,13 +45,12 @@
         android:layout_marginTop="8dp"
         android:padding="10dp"
         app:compactCalendarShouldSelectFirstDayOfMonthOnScroll="false"
-        app:compactCalendarBackgroundColor="#FFFFFF"
+        app:compactCalendarBackgroundColor="@color/colorBackgroundLight"
         app:compactCalendarCurrentDayBackgroundColor="#E7E6E6"
         app:compactCalendarCurrentDayTextColor="#D81B60"
         app:compactCalendarCurrentSelectedDayBackgroundColor="@color/colorPrimaryLeight"
-        app:compactCalendarMultiEventIndicatorColor="#242424"
-        app:compactCalendarTargetHeight="250dp"
-        app:compactCalendarTextColor="#2B2B2B"
+        app:compactCalendarMultiEventIndicatorColor="@color/colorDrawable"
+        app:compactCalendarTextColor="@color/colorDrawable"
         app:compactCalendarTextSize="12sp" />
 
     <View
