--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activitys.Videos.VideoActivity">
+    tools:context=".Activitys.Knowledge.KnowledgeActivity"
+    android:orientation="vertical">
 
     <SearchView
-        android:id="@+id/catigorys_search"
+        android:id="@+id/videos_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="auto"
         android:iconifiedByDefault="false"
         android:queryBackground="@android:color/transparent"
-        android:queryHint="ändern ******"
+        android:queryHint="Titel, Kategorie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,33 +22,21 @@
     </SearchView>
 
     <View
-        android:id="@+id/catigorys_divider"
+        android:id="@+id/videos_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="1"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@id/catigorys_search" />
+        app:layout_constraintTop_toBottomOf="@id/videos_search" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/catigorys_recycler"
+        android:id="@+id/videos_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:paddingHorizontal="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/catigorys_divider" />
+        app:layout_constraintTop_toBottomOf="@id/videos_divider" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/catigorys_confirmDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_check"
-        tools:visibility="visible" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
