Wissen kann grundlegend Hinzugefügt werden

--- a/app/src/main/res/drawable/ic_round_background.xml
+++ b/app/src/main/res/drawable/ic_round_background.xml
@@ -21,7 +21,7 @@
             <corners android:radius="20dp" />
             <stroke
                 android:width="6dp"
-                android:color="@color/colorBackground" />
+                android:color="@color/colorPrimary" />
         </shape>
     </item>
 </layer-list>
