--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -25,18 +25,14 @@
         android:id="@+id/videos_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_weight="1"
         android:background="?android:attr/listDivider"
         app:layout_constraintTop_toBottomOf="@id/videos_search" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/videos_recycler"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/knowledge_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:paddingHorizontal="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/videos_divider" />
 
 </LinearLayout>
