--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
     <color name="colorDdivider">#D7D8DD</color>
 
     <color name="colorTileBackground">@android:color/background_light</color>
-    <color name="colorDrawable">#757575</color>
+    <color name="colorDrawable">@color/colorDayNightContent</color>
+    <color name="colorText">@color/colorDayNightContent</color>
+    <color name="colorDayNightContent">#757575</color>
     <color name="colorBackground">#fafafa</color>
     <color name="colorBackgroundLight">#ffffff</color>
 </resources>
