--- a/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="10dp"
         android:layout_weight="1"
@@ -28,9 +28,10 @@
 
             <EditText
                 android:id="@+id/dialog_editOrAddKnowledge_Titel"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:inputType="textAutoCorrect|textCapSentences|textAutoComplete"
                 android:selectAllOnFocus="true" />
         </LinearLayout>
 
@@ -42,15 +43,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="Inhalt:"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/dialog_editOrAddKnowledge_content"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:inputType="textAutoCorrect|textCapSentences|textAutoComplete"
                 android:selectAllOnFocus="true" />
         </LinearLayout>
 
@@ -63,13 +65,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="Kategorien:"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/dialog_editOrAddKnowledge_categories"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ellipsize="marquee"
@@ -100,13 +102,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="Quellen:"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/dialog_editOrAddKnowledge_sources"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ellipsize="marquee"
@@ -167,7 +169,7 @@
 <!--                android:layout_width="wrap_content"-->
 <!--                android:layout_height="wrap_content"-->
 <!--                android:layout_marginRight="8dp"-->
-<!--                android:text="Genre:"-->
+<!--                android:text="GENRE:"-->
 <!--                android:textStyle="bold" />-->
 
 <!--            <TextView-->
@@ -216,7 +218,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="Bewerting:"
                 android:textStyle="bold" />
 
