--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -16,6 +16,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="12dp"
+            android:foreground="@drawable/ripple"
             android:src="@drawable/ic_arrow_left" />
 
         <TextView
@@ -25,7 +26,7 @@
             android:layout_weight="1"
             android:text="Juli 2019"
             android:textAlignment="center"
-            android:textColor="@color/colorDrawable"
+            android:textColor="@color/colorText"
             android:textSize="18sp" />
 
         <ImageView
@@ -34,6 +35,7 @@
             android:layout_height="30dp"
             android:layout_marginRight="12dp"
             android:scaleType="fitCenter"
+            android:foreground="@drawable/ripple"
             android:src="@drawable/ic_arrow_right" />
 
     </LinearLayout>
@@ -49,8 +51,8 @@
         app:compactCalendarCurrentDayBackgroundColor="#E7E6E6"
         app:compactCalendarCurrentDayTextColor="#D81B60"
         app:compactCalendarCurrentSelectedDayBackgroundColor="@color/colorPrimaryLeight"
-        app:compactCalendarMultiEventIndicatorColor="@color/colorDrawable"
-        app:compactCalendarTextColor="@color/colorDrawable"
+        app:compactCalendarMultiEventIndicatorColor="@color/colorDayNightContent"
+        app:compactCalendarTextColor="@color/colorText"
         app:compactCalendarTextSize="12sp" />
 
     <View
