--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorDdivider">#858585</color>
     <color name="colorTileBackground">#1A1A1A</color>
-    <color name="colorDrawable">#B3B3B3</color>
+    <color name="colorDayNightContent">#B3B3B3</color>
     <color name="colorBackground">#303030</color>
     <color name="colorBackgroundLight">#424242</color>
 </resources>
